Fixed up the track styles on small size

--- a/css/edmss.css
+++ b/css/edmss.css
@@ -117,11 +117,6 @@ a.item.current, a.item:hover {
     color: #aaa;
 }
 
-.playlist-header div {
-    text-align: center;
-}
-
-
 /* Track Styles */
 
 .track {
